--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="assets/images/pfp.jpg" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Appledragon13</title>
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--Custome css-->
+    <!--Custom css-->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1 nav-custom">Appledragon13</span>
+          
+        </div>
+      </nav>
+      <main class="container-fluid">
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <h2>About Me</h2>
+                <img src="assets/images/pfp.jpg" alt="image https://www.reddit.com/r/forhonor/comments/anvrrl/black_priorvortiger_manga_style_art_drawn_as_edgy/">
+              </div>
+              <div class="col">
+              <div class="col">
+                <h2>Currently Working On</h2>
+                <img src="assets/images/loading-loading-forever.gif" alt="image https://tenor.com/view/loading-loading-forever-bobux-loader-gif-18368917">
+              </div>
+            </div>
+          </div>
+      </main>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
