--- a/index.html
+++ b/index.html
@@ -23,11 +23,21 @@
               <div class="col">
                 <h2>About Me</h2>
                 <img src="assets/images/pfp.jpg" alt="image https://www.reddit.com/r/forhonor/comments/anvrrl/black_priorvortiger_manga_style_art_drawn_as_edgy/">
+                <p>Hello, I am Appledragon13. I am 17 and a newish web developer. In my free time, I like to play games like Borderlands, Minecraft, Sonic, Persona 5 Royal, Fallout, and Pokemon. I also like to read the Wings of Fire books. I like to program in my free time as well. I am also a DM for D&D and enjoy worldbuilding. I occasionally upload videos to my <a href="https://www.youtube.com/@Appledragon13" target=”_blank”>YouTube Channel</a> and stream on <a href="https://www.twitch.tv/appledragon13" target=”_blank”>Twitch</a>. Feel free to join my <a href="https://discord.gg/RS9fDayT24" target=”_blank”>Discord Server</a>.</p>
               </div>
               <div class="col">
               <div class="col">
                 <h2>Currently Working On</h2>
+                
                 <img src="assets/images/loading-loading-forever.gif" alt="image https://tenor.com/view/loading-loading-forever-bobux-loader-gif-18368917">
+                <div class="am">
+                  <ul>
+                    <li>Beat Pokemon Uranium</li>
+                    <li>Finish High School</li>
+                    <li>Go to College</li>
+                    <li>Make a successful Website</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
