--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <div class="col">
                 <h2>About Me</h2>
                 <img src="assets/images/pfp.jpg" alt="image https://www.reddit.com/r/forhonor/comments/anvrrl/black_priorvortiger_manga_style_art_drawn_as_edgy/">
-                <p>Hello, I am Appledragon13. I am 17 and a newish web developer. In my free time, I like to play games like Borderlands, Minecraft, Sonic, Persona 5 Royal, Fallout, and Pokemon. I also like to read the Wings of Fire books. I like to program in my free time as well. I am also a DM for D&D and enjoy worldbuilding. I occasionally upload videos to my <a href="https://www.youtube.com/@Appledragon13" target=”_blank”>YouTube Channel</a> and stream on <a href="https://www.twitch.tv/appledragon13" target=”_blank”>Twitch</a>. Feel free to join my <a href="https://discord.gg/RS9fDayT24" target=”_blank”>Discord Server</a>.</p>
+                <p>Hello, I am Appledragon13. I am 17 and a newish web developer. In my free time, I like to play games like Borderlands, Minecraft, Sonic, Persona 5 Royal, Fallout, and Pokemon. I also like to read the Wings of Fire books. I like to program in my free time as well. I am also a DM for D&D and enjoy worldbuilding. I occasionally upload videos to my <a class="bob-on-hover" href="https://www.youtube.com/@Appledragon13" target=”_blank”>YouTube Channel</a> and stream on <a class="bob-on-hover" href="https://www.twitch.tv/appledragon13" target=”_blank”>Twitch</a>. Feel free to join my <a class="bob-on-hover" href="https://discord.gg/RS9fDayT24" target=”_blank”>Discord Server</a>.</p>
               </div>
               <div class="col">
               <div class="col">
@@ -38,6 +38,31 @@
                     <li>Make a successful Website</li>
                   </ul>
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <h2>Meme conner</h2>
+                <table>
+                  <tr>
+                    <td><img src="assets/images/meme1.jpg" class="bob-on-hover"></td>
+                    <td><img src="assets/images/meme2.jpg" class="bob-on-hover"></td>
+                  </tr>
+                  <tr>
+                    <td><img src="assets/images/meme3.jpg" class="bob-on-hover"></td>
+                    <td><img src="assets/images/meme4.jpg" class="bob-on-hover"></td>
+                  </tr>
+                </table>
+              </div>
+              <div class="col">
+                <h2>Qoutes I like</h2>
+                <ul>
+                  <li>"As you know, madness is like gravity: All it takes is a little push." - Joker
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
