--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
                 </table>
               </div>
               <div class="col">
-                <h2>Qoutes I like</h2>
-                <ul>
-                  <li>"As you know, madness is like gravity: All it takes is a little push." - Joker
-                  </li>
-                </ul>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/TOusZIm9yds?si=-IIYsaFYIbX3GBEp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
